unpackaged/main/default/objects/RICSC_Relation__c/RICSC_Relation__c.object-meta.xml
<CustomObject>
    <description>Relation object is used to track the relations between 2 Customers (e.g. father, husband etc)</description>
    <label>Relationship</label>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>