unpackaged/main/default/objects/RICSC_Relation__c/fields/RICSC_Active__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Illustrates it the relation is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>