unpackaged/main/default/objects/RICSC_Relation__c/fields/RICSC_Comments__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Comments__c</fullName>
        <description>Field to add comments</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>