unpackaged/main/default/objects/RICSC_Relation__c/fields/RICSC_EndDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_EndDate__c</fullName>
        <description>It specifies when the relation has been closed</description>
        <label>End Date</label>
        <type>Date</type>
    </CustomField>