unpackaged/main/default/objects/RICSC_Relation__c/fields/RICSC_ExternalID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ID of the record in the external source system</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>