unpackaged/main/default/objects/RICSC_Relation__c/fields/RICSC_GoldenRecord__c.field-meta.xml
<CustomField>
        <fullName>RICSC_GoldenRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to to link the related Golden Record (the one that has the role in the relation type)</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship</relationshipLabel>
        <relationshipName>RICSC_RelationsGR</relationshipName>
        <type>Lookup</type>
    </CustomField>