unpackaged/main/default/objects/RICSC_Relation__c/fields/RICSC_HistoricalExternalID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_HistoricalExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Technical field containing an Old Legacy ID. Used for Legacy to SAP migration, visible only to System Admin</description>
        <label>Historical External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>