unpackaged/main/default/objects/RICSC_Relation__c/fields/RICSC_InverseRelationship__c.field-meta.xml
<CustomField>
        <fullName>RICSC_InverseRelationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System Field - to relate the respective inverse relation</description>
        <label>Inverse Relationship</label>
        <referenceTo>RICSC_Relation__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>RICSC_RelationsInverseRelationship</relationshipName>
        <type>Lookup</type>
    </CustomField>