unpackaged/main/default/objects/RICSC_Relation__c/fields/RICSC_RelatedAccount__c.field-meta.xml
<CustomField>
        <fullName>RICSC_RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to to link the secondary Person account (the one to which the primary [Account] is related to)</description>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relations (Related Account)</relationshipLabel>
        <relationshipName>RICSC_RelationsRelatedAccount</relationshipName>
        <type>Lookup</type>
    </CustomField>