unpackaged/main/default/objects/RICSC_Relation__c/fields/RICSC_RelationType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_RelationType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It specifies the Relation type from the list of already availalvle relations stored in a the Relation type dedicated object</description>
        <label>Relation Type</label>
        <referenceTo>RICSC_RelationType__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>RICSC_RelationsRelationType</relationshipName>
        <type>Lookup</type>
    </CustomField>