unpackaged/main/default/objects/RICSC_Relation__c/fields/RICSC_StartDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_StartDate__c</fullName>
        <description>It specifies when the relation has been enstablished</description>
        <label>Start Date</label>
        <type>Date</type>
    </CustomField>